feat: GCA-XX | add documentation get registered by community id origin v2
